--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <body>
-helloooooooo
+<a href="../practise/Day1.html">task1</a>
+<a href="../practise/Day2.html">task2</a>
 </body>
 </html>
